--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.PDFReaderKotlin"
         tools:targetApi="31">
         <activity
+            android:name=".activities.ImportantFolderActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.ImageToPDFActivity"
             android:exported="false" />
         <activity
