--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.PDFReaderKotlin"
         tools:targetApi="31">
         <activity
+            android:name=".activities.MainActivity"
+            android:exported="true" />
+        <activity
             android:name=".activities.ImportantFolderActivity"
             android:exported="false" />
         <activity
@@ -36,7 +39,7 @@
             android:name=".activities.SearchFileActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".activities.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
